# gcviewer

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.zig  flake.nix  rust-toolchain.toml
.github/workflows/: main.yml  on_main.yml  on_release.yml  release.yml
src/: adapter.zig  camera.rs  control.rs  display.zig  lib.rs  main.rs  main.zig  shader.wgsl  state.rs
theme/: cotton-candy.wgsl  rainbow.wgsl
