[package]
name = "gcviewer"
version = "0.1.0"
repository = "https://github.com/Sirius902/gcviewer/"
edition = "2021"

[dependencies]
bincode = "1.3.3"
cgmath = "0.18.0"
enclose = "1.1.8"
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.3"

[dependencies.gcinput]
git = "https://github.com/Sirius902/gcfeeder/"
tag = "v3.0.1"

[dependencies.bytemuck]
version = "1.12.3"
features = ["derive"]

[dependencies.clap]
version = "4.2.5"
features = ["derive"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png"]

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.serde]
version = "1.0.158"
features = ["derive"]

[build-dependencies.vergen]
version = "8.1.3"
default-features = false
features = ["git", "gitcl"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.0.0"

[target.'cfg(windows)'.build-dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "ico"]
