[package]
name = "gcviewer"
version = "0.1.0"
repository = "https://github.com/Sirius902/gcviewer/"
edition = "2021"

[dependencies]
bincode = "1"
cgmath = "0.18"
enclose = "1"
env_logger = "0.11"
pollster = "0.4"
wgpu = "23"
winit = "0.30"

[dependencies.gcinput]
git = "https://github.com/Sirius902/gcfeeder/"
tag = "v3.0.1"

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.serde]
version = "1"
features = ["derive"]

[build-dependencies.vergen]
version = "8"
default-features = false
features = ["git", "gitcl"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[target.'cfg(windows)'.build-dependencies.image]
version = "0.25"
default-features = false
features = ["png", "ico"]
