[package]
authors = ["Sirius902"]
edition = "2021"
name = "gcviewer"
readme = "README.md"
repository = "https://github.com/Sirius902/gcviewer"
version = "0.1.0"

[dependencies]
bincode = "1"
cgmath = "0.18"
enclose = "1"
env_logger = "0.11"
pollster = "0.4"
wgpu = "24"
winit = "0.30"

[dependencies.gcinput]
git = "https://github.com/Sirius902/gcfeeder"
tag = "v3.0.1"

[dependencies.bytemuck]
features = ["derive"]
version = "1"

[dependencies.clap]
features = ["derive"]
version = "4"

[dependencies.image]
default-features = false
features = ["png"]
version = "0.25"

[dependencies.log]
features = ["std"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1"

[build-dependencies.vergen-git2]
default-features = false
features = []
version = "1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[target.'cfg(windows)'.build-dependencies.image]
default-features = false
features = ["png", "ico"]
version = "0.25"
